pxc/tests/test_003_interface/interf_inh3.px
public namespace interf_inh3;
import common -;

interface ifoo {
  function void foo();
}

interface ibar <ifoo> {
  function void foo(int x); // error: can not override
}

function void t1()
{
}

t1();
